[tool.poetry]
name = "do-infra"
version = "0.1.0"
description = ""
authors = ["Daniel Longeuay <dannylongeuay@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^3.18.0"
pulumi-digitalocean = "^4.9.0"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
